What is new in Wcb 3.3?
-----------------------

The only changes contained in this release are a few adaptations made
necessary by submitting the package for inclusion in tklib (thanks to
Stuart Cassoff for his proposal and valuable assistance).

What was new in Wcb 3.2?
------------------------

1. Support for the new tile spinbox widget, introduced in Tk version
   8.6 and tile version 0.8.3.

2. Callback support for the new "replace" text widget subcommand,
   introduced in Tk 8.6.

3. New utility procedure "postDeleteEntryText" for Tk entry, tile entry,
   BWidget Entry, Tk spinbox, tile spinbox, and tile combobox widgets.

4. Updated the demo scripts "listboxtest1.tcl" and "listboxtest2.tcl" to
   work with Tk versions 8.5 and above.

What was new in Wcb 3.1?
------------------------

1. Support for the tile entry and combobox widgets.

2. Support for the ctext widget by George Peter Staplin (thanks to
   Kenneth Green for his proposal).

3. Minor improvements in the documentation.

What was new in Wcb 3.0?
------------------------

1. Callback support for the new tablelist commands "activatecell",
   "cellselection set", and "cellselection clear", introduced in
   Tablelist version 3.5.

2. Minor improvements in the code and documentation.

What was new in Wcb 2.9?
------------------------

1. Applied a patch proposed (in a slightly different form) by Mats
   Bengtsson that works around a bug in the "info script" command on
   the Macintosh.

2. The code and the documentation now explicitly mention the support
   for the Entry widget from the BWidget package.  Everything that
   refers to entry widgets is valid for BWidget Entry widgets, too.

3. A new demo script showing how widget callbacks can be combined with
   the undo mechanism for text widgets.

4. Improvements in the demo scripts and documentation.

What was new in Wcb 2.8?
------------------------

1. The before/after-selset and before/after-selclear callbacks are now