@@ -163,8 +163,8 @@
     </address>
   </blockquote>
 
-  <p>The distribution file is <code>wcb3.3.tar.gz</code> for UNIX and
-  <code>wcb3_3.zip</code> for Windows.&nbsp; These files contain the same
+  <p>The distribution file is <code>wcb3.4.tar.gz</code> for UNIX and
+  <code>wcb3_4.zip</code> for Windows.&nbsp; These files contain the same
   information, except for the additional carriage return character preceding
   the linefeed at the end of each line in the text files for Windows.</p>
 
@@ -188,21 +188,21 @@
   respectively.</p>
 
   <p>To install Wcb <i>on UNIX</i>, <code>cd</code> to the desired directory
-  and unpack the distribution file <code>wcb3.3.tar.gz</code>:</p>
+  and unpack the distribution file <code>wcb3.4.tar.gz</code>:</p>
 
   <blockquote>
     <pre>
-gunzip -c wcb3.3.tar.gz | tar -xf -
+gunzip -c wcb3.4.tar.gz | tar -xf -
 </pre>
   </blockquote>
 
-  <p>This command will create a directory named <code>wcb3.3</code>, with the
+  <p>This command will create a directory named <code>wcb3.4</code>, with the
   subdirectories <code>demos</code>, <code>doc</code>, and
   <code>scripts</code>.</p>
 
   <p><i>On Windows</i>, use WinZip or some other program capable of unpacking
-  the distribution file <code>wcb3_3.zip</code> into the directory
-  <code>wcb3.3</code>, with the subdirectories <code>demos</code>,
+  the distribution file <code>wcb3_4.zip</code> into the directory
+  <code>wcb3.4</code>, with the subdirectories <code>demos</code>,
   <code>doc</code>, and <code>scripts</code>.</p>
 
   <p>Notice that in tklib the Wcb <code>demos</code> directory is replaced
